# weather

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.py  requirements.txt  weather.db
app/: __init__.py  config.py  database.py  main.py  models.py  requirements.txt  schema.py  schemas.py
app/data/: weather.db  weather.db-journal
data/: weather.db
