[tool.poetry]
name = "weather-ingestor"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "app" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.19.0"
sqlalchemy = "^1.4.0"
pydantic = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"